Add progress to dissertation

--- a/dissertation/index.html
+++ b/dissertation/index.html
@@ -103,6 +103,20 @@
               <dt>2018</dt>
               <dd class="pos-right clearfix">
                 <div class="circ"></div>
+                <div class="time">August 19</div>
+                <div class="events">
+                  <div class="pull-left">
+                    <img class="events-object img-rounded" src="../img/IEEE.png">
+                  </div>
+                  <div class="events-body">
+                    <h4 class="events-heading">Workshop Paper submitted to ICDM2018</h4>
+                    <p>Detecting outliers in streaming time series data from ARM distributed sensors</p>
+                    <p>Yuping Lu, Jitendra Kumar, Nathan Collier, Bhargavi Krishna, Michael A. Langston</p>
+                  </div>
+                </div>
+              </dd>
+              <dd class="pos-left clearfix">
+                <div class="circ"></div>
                 <div class="time">April 2</div>
                 <div class="events">
                   <div class="pull-left">
@@ -116,12 +130,12 @@
                   </div>
                 </div>
               </dd>
-              <dd class="pos-left clearfix">
+              <dd class="pos-right clearfix">
                 <div class="circ"></div>
                 <div class="time">March 24</div>
                 <div class="events">
                   <div class="pull-left">
-                    <img class="events-object img-rounded" src="../img/isbra.jpg">
+                    <img class="events-object img-rounded" src="../img/BMC.jpg">
                   </div>
                   <div class="events-body">
                     <h4 class="events-heading">Paper Accepted by ISBRA2018</h4>
@@ -131,7 +145,7 @@
                 </div>
               </dd>
               <dt>2017</dt>
-              <dd class="pos-right clearfix">
+              <dd class="pos-left clearfix">
                 <div class="circ"></div>
                 <div class="time">May 7</div>
                 <div class="events">
@@ -141,6 +155,21 @@
                   <div class="events-body">
                     <h4 class="events-heading">Biclique submitted to CRAN</h4>
                     <p>A tool for enumerating maximal complete bipartite graphs.</p>
+                  </div>
+                </div>
+              </dd>
+              <dt>2016</dt>
+              <dd class="pos-right clearfix">
+                <div class="circ"></div>
+                <div class="time">April 9</div>
+                <div class="events">
+                  <div class="pull-left">
+                    <img class="events-object img-rounded" src="../img/BMC.png">
+                  </div>
+                  <div class="events-body">
+                    <h4 class="events-heading">Poster presented at UT-KBRIN Bioinformatics Summit 2016</h4>
+                    <p>Enrichment vs robustness: A comparison of transcriptomic data clustering metrics</p>
+                    <p>Yuping Lu, Charles A. Phillips, Michael A. Langston</p>
                   </div>
                 </div>
               </dd>
