--- a/dissertation/index.html
+++ b/dissertation/index.html
@@ -106,7 +106,7 @@
                 <div class="time">August 19</div>
                 <div class="events">
                   <div class="pull-left">
-                    <img class="events-object img-rounded" src="../img/IEEE.png">
+                    <img class="events-object img-rounded" src="./img/IEEE.png">
                   </div>
                   <div class="events-body">
                     <h4 class="events-heading">Workshop Paper submitted to ICDM2018</h4>
@@ -120,7 +120,7 @@
                 <div class="time">April 2</div>
                 <div class="events">
                   <div class="pull-left">
-                    <img class="events-object img-rounded" src="../img/UT.jpg">
+                    <img class="events-object img-rounded" src="./img/UT.jpg">
                   </div>
                   <div class="events-body">
                     <h4 class="events-heading">PhD Dissertation Proposal</h4>
@@ -135,7 +135,7 @@
                 <div class="time">March 24</div>
                 <div class="events">
                   <div class="pull-left">
-                    <img class="events-object img-rounded" src="../img/BMC.jpg">
+                    <img class="events-object img-rounded" src="./img/BMC.jpg">
                   </div>
                   <div class="events-body">
                     <h4 class="events-heading">Paper Accepted by ISBRA2018</h4>
@@ -150,7 +150,7 @@
                 <div class="time">May 7</div>
                 <div class="events">
                   <div class="pull-left">
-                    <img class="events-object img-rounded" src="../img/R.png">
+                    <img class="events-object img-rounded" src="./img/R.png">
                   </div>
                   <div class="events-body">
                     <h4 class="events-heading">Biclique submitted to CRAN</h4>
@@ -164,7 +164,7 @@
                 <div class="time">April 9</div>
                 <div class="events">
                   <div class="pull-left">
-                    <img class="events-object img-rounded" src="../img/BMC.png">
+                    <img class="events-object img-rounded" src="./img/BMC.jpg">
                   </div>
                   <div class="events-body">
                     <h4 class="events-heading">Poster presented at UT-KBRIN Bioinformatics Summit 2016</h4>
@@ -179,7 +179,7 @@
                 <div class="time">August 6</div>
                 <div class="events">
                   <div class="pull-left">
-                    <img class="events-object img-rounded" src="../img/UT.jpg">
+                    <img class="events-object img-rounded" src="./img/UT.jpg">
                   </div>
                   <div class="events-body">
                     <h4 class="events-heading">Started PhD program at UTK</h4>
