Update paper status

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             </a>
           </strong><br/>
           Yuping Lu, Jitendra Kumar, Nathan Collier, Michael A. Langston<br/>
-          <span class="venue"><a href="https://www.climatemodeling.org/workshops/dmess2018/">DMESS 2018</a></span> — To be submitted<br/>
+          <span class="venue"><a href="https://www.climatemodeling.org/workshops/dmess2018/">DMESS 2018</a></span> — Accepted<br/>
           <span class="pub">
             <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
             <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
@@ -350,7 +350,7 @@
     </ul>
 
     <div class="footer">
-      <p>&copy; 2018 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2018-07-21</p>
+      <p>&copy; 2018 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2018-09-11</p>
     </div>
   </div>
 
