--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="col-sm-8 col-md-8">
         <h3 id="research-interests">Research Interests</h3>
         <p>
-          I am interested in developing graph algorithms and tools for biological data. My recent biclique enumeration R package can be downloaded <a href="https://github.com/YupingLu/biclique">here</a>. I am also interested in using data mining and machine learning methods to solve scientific data problems. My upcoming project is Radar data classification.
+          I am interested in developing graph algorithms and tools for biological data. My recent biclique enumeration R package can be downloaded <a href="https://github.com/YupingLu/biclique">here</a>. I am also interested in using data mining and machine learning methods to solve scientific data problems. My current project is Radar data classification.
         </p>
 
         <h3 id="education">Education</h3>
