--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             </a>
           </strong><br/>
           Yuping Lu, Charles A. Phillips, Michael A. Langston<br/>
-          <span class="venue"><a href="https://bmcbioinformatics.biomedcentral.com/">BMC Bioinformatics</a></span> — To be submitted<br/>
+          <span class="venue"><a href="https://bmcbioinformatics.biomedcentral.com/">BMC Bioinformatics</a></span> — Under Review<br/>
           <span class="pub">
             <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
             <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
