Add application record

--- a/dissertation/index.html
+++ b/dissertation/index.html
@@ -101,15 +101,28 @@
           <div class="timeline">
             <dl>
               <dt>2018</dt>
+              <dd class="pos-left clearfix">
+                <div class="circ"></div>
+                <div class="time">November 14</div>
+                <div class="events">
+                  <div class="pull-left">
+                    <img class="events-object img-rounded" src="./img/UT.png">
+                  </div>
+                  <div class="events-body">
+                    <h4 class="events-heading">Application for Graduation on myutk</h4>
+                    <p><a href="../files/myutk.pdf">Record</a></p>
+                  </div>
+                </div>
+              </dd>
               <dd class="pos-right clearfix">
                 <div class="circ"></div>
-                <div class="time">August 19</div>
+                <div class="time">September 14</div>
                 <div class="events">
                   <div class="pull-left">
                     <img class="events-object img-rounded" src="./img/IEEE.png">
                   </div>
                   <div class="events-body">
-                    <h4 class="events-heading">Workshop Paper submitted to ICDM2018</h4>
+                    <h4 class="events-heading">Workshop Paper Accepted by ICDM2018</h4>
                     <p>Detecting outliers in streaming time series data from ARM distributed sensors</p>
                     <p>Yuping Lu, Jitendra Kumar, Nathan Collier, Bhargavi Krishna, Michael A. Langston</p>
                   </div>
@@ -196,7 +209,7 @@
     </div>
 
     <div class="footer">
-      <p>&copy; 2018 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2018-08-28</p>
+      <p>&copy; 2018 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2018-11-14</p>
     </div>
   </div>
 
