--- a/dissertation/index.html
+++ b/dissertation/index.html
@@ -109,7 +109,7 @@
                     <img class="events-object img-rounded" src="./img/UT.jpg">
                   </div>
                   <div class="events-body">
-                    <h4 class="events-heading">Applied for Graduation on myutk</h4>
+                    <h4 class="events-heading">Applied for Graduation on MyUTK</h4>
                     <p><a href="../files/myutk.pdf">Record</a></p>
                   </div>
                 </div>
