Add radar results

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="col-sm-8 col-md-8">
         <h3 id="research-interests">Research Interests</h3>
         <p>
-          I am interested in developing graph algorithms and tools for biological data. My recent biclique enumeration R package can be downloaded <a href="https://github.com/YupingLu/biclique">here</a>. I am also interested in using data mining and machine learning methods to solve scientific data problems. My current project is Radar data classification.
+          I am interested in developing graph algorithms and tools for biological data. My recent biclique enumeration R package can be downloaded <a href="https://github.com/YupingLu/biclique">here</a>. I am also interested in using data mining and machine learning methods to solve scientific data problems. My current project is <a href="files/nexrad.pdf">NEXRAD Radar data classification</a>.
         </p>
 
         <h3 id="education">Education</h3>
@@ -350,7 +350,7 @@
     </ul>
 
     <div class="footer">
-      <p>&copy; 2018 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2018-09-11</p>
+      <p>&copy; 2019 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2019-01-10</p>
     </div>
   </div>
 
