--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
         <div class="pub">
           <strong>
             <a href="/files/FAW2015.pdf" class="pub-title">
-            Reviwer, 9th International Workshop on Frontiers in Algorithmics, FAW 2015.
+            Reviewer, 9th International Workshop on Frontiers in Algorithmics, FAW 2015.
             </a>
           </strong><br/>
           <span class="pub">
@@ -322,7 +322,7 @@
         <div class="pub">
           <strong>
             <a href="/files/WALCOM2015.pdf" class="pub-title">
-            Reviwer, 9th International Workshop on Algorithms and Computation, WALCOM 2015.
+            Reviewer, 9th International Workshop on Algorithms and Computation, WALCOM 2015.
             </a>
           </strong><br/>
           <span class="pub">
@@ -350,7 +350,7 @@
     </ul>
 
     <div class="footer">
-      <p>&copy; 2019 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2019-01-10</p>
+      <p>&copy; 2019 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2019-01-11</p>
     </div>
   </div>
 
