--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link " href="/files/yupinglu.resume.r.pdf">
-            Resume
+          <a class="nav-link " href="/files/Yuping_Lu_CV.pdf">
+            Curriculum Vitae
           </a>
         </li>
         
@@ -94,7 +94,7 @@
         <ul>
           <li><a href="http://www.eecs.utk.edu/">Department of Electrical Engineering &amp; Computer Science</a></li> 
           <li>PhD (in progress)</li>
-          <li><strong>Advisor</strong>: Dr. Michael Langston</li>
+          <li><strong>Advisor</strong>: Dr. Michael A. Langston</li>
         </ul>
 
         <h5 id="nanjing-agricultural-university"><a href="http://english.njau.edu.cn/">Nanjing Agricultural University</a></h5>
