--- a/index.html
+++ b/index.html
@@ -128,17 +128,16 @@
       <strong>Oak Ridge National Laboratory</strong> — <em>Graduate Research Assistant at ARM Data Center</em> — October 2017-Present
       <ul>
         <li>Mentor: <a href="https://www.climatemodeling.org/~jkumar/">Jitendra Kumar</a></li>
-        <li>Outlier Detection</li>
-        <li>Data Classification</li>
+        <li>NEXRAD data classification using deep learning models.</li>
+        <li>Detecting outliers in streaming time series data from ARM distributed sensors.</li>
       </ul>
     </div>
     
     <div>
       <strong>University of Tennessee, Knoxville</strong> — <em>Graduate Research Assistant at Office of Information Technology</em> — July 2014-October 2017
       <ul>
-        <li>Administration and implementation of Google Search Appliance.</li>
-        <li>Configuration and administration of campus web servers.</li>
-        <li>Helped teach occasional workshops on various topics, like search technology, SQLite.</li>
+        <li>University web server configuration and optimization.</li>
+        <li>Google Search Appliance administration and implementation.</li>
       </ul>
     </div>
 
@@ -161,7 +160,7 @@
     </div>
 
     <div>
-      <strong><a href="http://www.ztesoft.com/">ZTEsoft R&amp;D Center</a></strong> — <em>Implementation Engineer</em> — July 2011-May 2012
+      <strong><a href="http://www.iwhalecloud.com/page1?_l=en">ZTEsoft (Now Rebranded to Whale Cloud)</a></strong> — <em>Implementation Engineer</em> — July 2011-May 2012
       <ul>
         <li>Worked on two main projects.</li>
         <li>Lima, Peru Perusat Wimax CvBS Operations &amp; Maintenance Project.</li>
@@ -181,7 +180,7 @@
             </a>
           </strong><br/>
           Yuping Lu, Jitendra Kumar, Nathan Collier, Michael A. Langston<br/>
-          <span class="venue"><a href="https://www.climatemodeling.org/workshops/dmess2018/">DMESS 2018</a></span> — Accepted<br/>
+          <span class="venue"><a href="https://www.climatemodeling.org/workshops/dmess2018/">Proceedings of the 2018 IEEE International Conference on Data Mining Workshops</a></span> (ICDMW 2018)<br/>
           <span class="pub">
             <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
             <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
@@ -211,10 +210,10 @@
         <div class="pub">
           <strong>
             <a href="#" class="pub-title">
-            Improving Paraclique Cluster Quality by Starting Clique Selection
+            The Effect of Clique Selection on Paraclique Cluster Validity: An Experimental Analysis
             </a>
           </strong><br/>
-          Yuping Lu, Charles A. Phillips, Michael A. Langston<br/>
+          Yuping Lu, Charles A. Phillips, Elissa J. Chesler, Michael A. Langston<br/>
           <span class="venue"><a href="https://bmcresnotes.biomedcentral.com/">BMC Research Notes</a></span> — To be submitted<br/>
           <span class="pub">
             <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
@@ -350,7 +349,7 @@
     </ul>
 
     <div class="footer">
-      <p>&copy; 2019 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2019-01-11</p>
+      <p>&copy; 2019 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2019-01-12</p>
     </div>
   </div>
 
