--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       </div>
     </div>
 
-    <h3 id="research-and-work-experience">Research and Work Experience</h3>
+    <h3 id="research-and-work-experience">Experience</h3>
     <div>
       <strong>Oak Ridge National Laboratory</strong> — <em>Graduate Research Assistant at ARM Data Center</em> — October 2017-Present
       <ul>
