--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         <h3 id="education">Education</h3>
 
-        <h5 id="university-of-tennessee"><a href="http://www.utk.edu">University of Tennessee, Knoxville</a></h5>
+        <h5 id="university-of-tennessee"><a href="http://www.utk.edu">The University of Tennessee, Knoxville</a></h5>
         <ul>
           <li><a href="http://www.eecs.utk.edu/">Department of Electrical Engineering &amp; Computer Science</a></li> 
           <li>PhD (in progress)</li>
@@ -134,7 +134,7 @@
     </div>
     
     <div>
-      <strong>University of Tennessee, Knoxville</strong> — <em>Graduate Research Assistant at Office of Information Technology</em> — July 2014-October 2017
+      <strong>The University of Tennessee, Knoxville</strong> — <em>Graduate Research Assistant at Office of Information Technology</em> — July 2014-October 2017
       <ul>
         <li>University web server configuration and optimization.</li>
         <li>Google Search Appliance administration and implementation.</li>
@@ -152,7 +152,7 @@
     </div>
 
     <div>
-      <strong>University of Tennessee, Knoxville</strong> — <em>Graduate Research Assistant at Dr. Langston’s lab</em> — Aug. 2013-June 2014
+      <strong>The University of Tennessee, Knoxville</strong> — <em>Graduate Research Assistant at Dr. Langston’s lab</em> — Aug. 2013-June 2014
       <ul>
         <li>Upgraded <a href="https://grappa.eecs.utk.edu/">GrAPPA</a> which is a web-based interface built on the Galaxy framework for the graph-based tools.</li>
         <li>It includes all the necessary tools to do a complete microarray analysis, from uploading RAW microarray data to postprocessing visualization tools.</li>
