--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </div>
 
     <div>
-      <strong><a href="http://www.iwhalecloud.com/page1?_l=en">ZTEsoft (Now Rebranded to Whale Cloud)</a></strong> — <em>Implementation Engineer</em> — July 2011-May 2012
+      <strong><a href="http://www.iwhalecloud.com/page1?_l=en">ZTEsoft</a> (now Whale Cloud)</strong> — <em>Implementation Engineer</em> — July 2011-May 2012
       <ul>
         <li>Worked on two main projects.</li>
         <li>Lima, Peru Perusat Wimax CvBS Operations &amp; Maintenance Project.</li>
