--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             </a>
           </strong><br/>
           Yuping Lu, Charles A. Phillips, Michael A. Langston<br/>
-          <span class="venue"><a href="https://bmcbioinformatics.biomedcentral.com/">BMC Bioinformatics</a></span> — Under Review<br/>
+          <span class="venue"><a href="https://bmcbioinformatics.biomedcentral.com/">BMC Bioinformatics</a></span> — Under final round review<br/>
           <span class="pub">
             <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
             <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
@@ -349,7 +349,7 @@
     </ul>
 
     <div class="footer">
-      <p>&copy; 2019 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2019-01-12</p>
+      <p>&copy; 2019 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2019-03-27</p>
     </div>
   </div>
 
