Add new paper item

--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
             Detecting Outliers in Streaming Time Series Data from ARM Distributed Sensors
             </a>
           </strong><br/>
-          Yuping Lu, Jitendra Kumar, Nathan Collier, Michael A. Langston<br/>
-          <span class="venue"><a href="https://www.climatemodeling.org/workshops/dmess2018/">Proceedings of the 2018 IEEE International Conference on Data Mining Workshops</a></span> (ICDMW 2018)<br/>
+          Yuping Lu, Jitendra Kumar, Nathan Collier, Bhargavi Krishna, Michael A. Langston<br/>
+          <span class="venue"><a href="https://ieeexplore.ieee.org/document/8637541">Proceedings of the 2018 IEEE International Conference on Data Mining Workshops</a></span> (ICDMW 2018)<br/>
           <span class="pub">
-            <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
-            <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
+            <a href="https://ieeexplore.ieee.org/document/8637541"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
+            <a href="https://ieeexplore.ieee.org/document/8637541"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
           </span>
         </div>
       </li>
@@ -191,6 +191,21 @@
 
     <h4 id="journal-papers">Journal Papers</h4>
     <ul>
+      <li>
+        <div class="pub">
+          <strong>
+            <a href="#" class="pub-title">
+            Convolutional Neural Networks for Hydrometeor Classification using Dual Polarization Doppler Radars
+            </a>
+          </strong><br/>
+          Yuping Lu, Jitendra Kumar<br/>
+          <span class="venue"><a href="#"></a></span> — To be submitted<br/>
+          <span class="pub">
+            <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
+            <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
+          </span>
+        </div>
+      </li>
       <li>
         <div class="pub">
           <strong>
@@ -349,7 +364,7 @@
     </ul>
 
     <div class="footer">
-      <p>&copy; 2019 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2019-03-27</p>
+      <p>&copy; 2019 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2019-05-09</p>
     </div>
   </div>
 
