--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@
         <div class="pub">
           <strong>
             <a href="#" class="pub-title">
-            The Effect of Clique Selection on Paraclique Cluster Validity: An Experimental Analysis
+            Clique Selection and its Effect on Paraclique Enrichment: An Experimental Study
             </a>
           </strong><br/>
           Yuping Lu, Charles A. Phillips, Elissa J. Chesler, Michael A. Langston<br/>
-          <span class="venue"><a href="https://bmcresnotes.biomedcentral.com/">BMC Research Notes</a></span> — To be submitted<br/>
+          <span class="venue"><a href="https://bmcresnotes.biomedcentral.com/">BMC Research Notes</a></span> — Under review<br/>
           <span class="pub">
             <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
             <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
@@ -364,7 +364,7 @@
     </ul>
 
     <div class="footer">
-      <p>&copy; 2019 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2019-05-09</p>
+      <p>&copy; 2019 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2019-05-23</p>
     </div>
   </div>
 
