--- a/dissertation/index.html
+++ b/dissertation/index.html
@@ -100,6 +100,19 @@
         <div class="col-md-12">
           <div class="timeline">
             <dl>
+              <dt>2019</dt>
+              <dd class="pos-right clearfix">
+                <div class="circ"></div>
+                <div class="time">June 10</div>
+                <div class="events">
+                  <div class="pull-right">
+                    <img class="events-object img-rounded" src="./img/UT.jpg">
+                  </div>
+                  <div class="events-body">
+                    <h4 class="events-heading">Dissertation draft submitted to Graduate School</h4>
+                  </div>
+                </div>
+              </dd>
               <dt>2018</dt>
               <dd class="pos-left clearfix">
                 <div class="circ"></div>
@@ -209,7 +222,7 @@
     </div>
 
     <div class="footer">
-      <p>&copy; 2018 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2018-11-14</p>
+      <p>&copy; 2019 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2019-06-11</p>
     </div>
   </div>
 
