--- a/dissertation/index.html
+++ b/dissertation/index.html
@@ -101,11 +101,25 @@
           <div class="timeline">
             <dl>
               <dt>2019</dt>
+              <dd class="pos-left clearfix">
+                <div class="circ"></div>
+                <div class="time">June 11</div>
+                <div class="events">
+                  <div class="pull-left">
+                    <img class="events-object img-rounded" src="./img/DOE.png">
+                  </div>
+                  <div class="events-body">
+                    <h4 class="events-heading">Poster presented at 2019 ARM/ASR PI Meeting</h4>
+                    <p>Convolutional Neural Networks for Hydrometeor Classification Using Dual Polarization Doppler Radars</p>
+                    <p>Yuping Lu, Jitendra (Jitu) Kumar</p>
+                  </div>
+                </div>
+              </dd>
               <dd class="pos-right clearfix">
                 <div class="circ"></div>
                 <div class="time">June 10</div>
                 <div class="events">
-                  <div class="pull-right">
+                  <div class="pull-left">
                     <img class="events-object img-rounded" src="./img/UT.jpg">
                   </div>
                   <div class="events-body">
