--- a/dissertation/index.html
+++ b/dissertation/index.html
@@ -150,7 +150,7 @@
                   </div>
                   <div class="events-body">
                     <h4 class="events-heading">Workshop Paper Accepted by ICDM2018</h4>
-                    <p>Detecting outliers in streaming time series data from ARM distributed sensors</p>
+                    <p>Detecting Outliers in Streaming Time Series Data from ARM Distributed Sensors</p>
                     <p>Yuping Lu, Jitendra Kumar, Nathan Collier, Bhargavi Krishna, Michael A. Langston</p>
                   </div>
                 </div>
@@ -208,7 +208,7 @@
                   </div>
                   <div class="events-body">
                     <h4 class="events-heading">Poster presented at UT-KBRIN Bioinformatics Summit 2016</h4>
-                    <p>Enrichment vs robustness: A comparison of transcriptomic data clustering metrics</p>
+                    <p>Enrichment vs Robustness: A Comparison of Transcriptomic Data Clustering Metrics</p>
                     <p>Yuping Lu, Charles A. Phillips, Michael A. Langston</p>
                   </div>
                 </div>
