--- a/dissertation/index.html
+++ b/dissertation/index.html
@@ -111,7 +111,7 @@
                   <div class="events-body">
                     <h4 class="events-heading">Poster presented at 2019 ARM/ASR PI Meeting</h4>
                     <p>Convolutional Neural Networks for Hydrometeor Classification Using Dual Polarization Doppler Radars</p>
-                    <p>Yuping Lu, Jitendra (Jitu) Kumar</p>
+                    <p>Yuping Lu, Jitendra Kumar</p>
                   </div>
                 </div>
               </dd>
