Add new entries

--- a/index.html
+++ b/index.html
@@ -273,6 +273,21 @@
       <li>
         <div class="pub">
           <strong>
+            <a href="/files/PI2019poster.pdf" class="pub-title">
+            Convolutional Neural Networks for Hydrometeor Classification Using Dual Polarization Doppler Radars
+            </a>
+          </strong><br/>
+          Yuping Lu, Jitendra Kumar<br/>
+          <span class="venue"><a href="https://www.orau.gov/2019armasr/">2019 ARM/ASR PI Meeting</a></span>
+          — Rockville, MD, June 11, 2019<br/>
+          <span class="pub">
+            <a href="/files/PI2019poster.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Poster</a>
+          </span>
+        </div>
+      </li>
+      <li>
+        <div class="pub">
+          <strong>
             <a href="/files/bio2016.pdf" class="pub-title">
             Enrichment vs Robustness: A Comparison of Transcriptomic Data Clustering Metrics
             </a>
@@ -289,6 +304,19 @@
 
     <h4 id="posters">Talks</h4>
     <ul>
+      <li>
+        <div class="pub">
+          <strong>
+            <a href="https://www.orau.gov/2019armasr/" class="pub-title">
+            Deep Convolutional Neural Networks for Hydrometeor Classification using Dual Polarization Doppler Radars
+            </a>
+          </strong><br/>
+          2019 ARM/ASR PI Meeting, Rockville, MD, June 10, 2019<br/>
+          <span class="pub">
+            <a href="/files/PI2019.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Slides</a>
+          </span>
+        </div>
+      </li>
       <li>
         <div class="pub">
           <strong>
@@ -309,7 +337,7 @@
             Outlier Detection for SGPMET Data
             </a>
           </strong><br/>
-          Oak Ridge National Labs, April 04, 2018<br/>
+          Oak Ridge National Laboratory, April 04, 2018<br/>
           <span class="pub">
             <a href="/files/ARM-yl.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Slides</a>
           </span>
@@ -364,7 +392,7 @@
     </ul>
 
     <div class="footer">
-      <p>&copy; 2019 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2019-05-23</p>
+      <p>&copy; 2019 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2019-06-11</p>
     </div>
   </div>
 
