--- a/dissertation/index.html
+++ b/dissertation/index.html
@@ -101,6 +101,19 @@
           <div class="timeline">
             <dl>
               <dt>2019</dt>
+               <dd class="pos-right clearfix">
+                <div class="circ"></div>
+                <div class="time">June 21</div>
+                <div class="events">
+                  <div class="pull-left">
+                    <img class="events-object img-rounded" src="./img/UT.jpg">
+                  </div>
+                  <div class="events-body">
+                    <h4 class="events-heading">Schedule of Dissertation submitted</h4>
+                    <p><a href="../files/schedule.pdf">Schedule of Dissertation form</a></p>
+                  </div>
+                </div>
+              </dd>
               <dd class="pos-left clearfix">
                 <div class="circ"></div>
                 <div class="time">June 11</div>
