--- a/dissertation/index.html
+++ b/dissertation/index.html
@@ -82,8 +82,8 @@
       <a href="http://yupinglu.me/dissertation/">Dissertation</a>
     </p>
 
-    <h3 id="title">Clustering Metric, Weighted Graph Algorithm and Singular Spectrum Method for the Analysis of Scientific Data</h3>
-    <h5 id="university-of-tennessee">A PhD Dissertation by: Yuping Lu (Allan)</h5>
+    <h3 id="title">Advances in Big Data Analytics: Algorithmic Stability and Data Cleansing</h3>
+    <h5 id="university-of-tennessee">A PhD Dissertation by: Yuping (Allan) Lu</h5>
     <br/>
     <h4 id="honors">PhD Committee Members</h4>
     <ul>
@@ -249,7 +249,7 @@
     </div>
 
     <div class="footer">
-      <p>&copy; 2019 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2019-06-11</p>
+      <p>&copy; 2019 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2019-06-21</p>
     </div>
   </div>
 
