--- a/dissertation/index.html
+++ b/dissertation/index.html
@@ -42,7 +42,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link " href="../files/yupinglu.resume.r.pdf">
+          <a class="nav-link " href="../files/Yuping_Lu_CV.pdf">
             Resume
           </a>
         </li>
