--- a/dissertation/index.html
+++ b/dissertation/index.html
@@ -101,7 +101,20 @@
           <div class="timeline">
             <dl>
               <dt>2019</dt>
-               <dd class="pos-right clearfix">
+              <dd class="pos-left clearfix">
+                <div class="circ"></div>
+                <div class="time">July 15</div>
+                <div class="events">
+                  <div class="pull-left">
+                    <img class="events-object img-rounded" src="./img/UT.jpg">
+                  </div>
+                  <div class="events-body">
+                    <h4 class="events-heading">Defend Dissertation</h4>
+                    <p><a href="../files/defend.pdf">Defend Slides</a></p>
+                  </div>
+                </div>
+              </dd>
+              <dd class="pos-right clearfix">
                 <div class="circ"></div>
                 <div class="time">June 21</div>
                 <div class="events">
@@ -250,7 +263,7 @@
     </div>
 
     <div class="footer">
-      <p>&copy; 2019 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2019-06-21</p>
+      <p>&copy; 2019 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2019-07-15</p>
     </div>
   </div>
 
