--- a/dissertation/index.html
+++ b/dissertation/index.html
@@ -109,8 +109,8 @@
                     <img class="events-object img-rounded" src="./img/UT.jpg">
                   </div>
                   <div class="events-body">
-                    <h4 class="events-heading">Defend Dissertation</h4>
-                    <p><a href="../files/defend.pdf">Defend Slides</a></p>
+                    <h4 class="events-heading">Dissertation Defense</h4>
+                    <p><a href="../files/defense.pdf">Defense Slides</a></p>
                   </div>
                 </div>
               </dd>
