--- a/index.html
+++ b/index.html
@@ -93,8 +93,10 @@
         <h5 id="university-of-tennessee"><a href="http://www.utk.edu">The University of Tennessee, Knoxville</a></h5>
         <ul>
           <li><a href="http://www.eecs.utk.edu/">Department of Electrical Engineering &amp; Computer Science</a></li> 
-          <li>PhD (in progress)</li>
+          <li>PhD (August 2019)</li>
+          <li><strong>Major</strong>: Computer Science</li>
           <li><strong>Advisor</strong>: Dr. Michael A. Langston</li>
+          <li><a href="http://yupinglu.me/dissertation/">Dissertation</a></li>
         </ul>
 
         <h5 id="nanjing-agricultural-university"><a href="http://english.njau.edu.cn/">Nanjing Agricultural University</a></h5>
@@ -125,7 +127,7 @@
 
     <h3 id="research-and-work-experience">Experience</h3>
     <div>
-      <strong>Oak Ridge National Laboratory</strong> — <em>Graduate Research Assistant at ARM Data Center</em> — October 2017-Present
+      <strong>Oak Ridge National Laboratory</strong> — <em>Graduate Research Assistant at ARM Data Center</em> — October 2017-August 2019
       <ul>
         <li>Mentor: <a href="https://www.climatemodeling.org/~jkumar/">Jitendra Kumar</a></li>
         <li>NEXRAD data classification using deep learning models.</li>
@@ -392,7 +394,7 @@
     </ul>
 
     <div class="footer">
-      <p>&copy; 2019 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2019-06-11</p>
+      <p>&copy; 2019 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2019-07-30</p>
     </div>
   </div>
 
