--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </li>
 
       </ul>
-      <h2><a class="black" href="/">Yuping Lu</a></h2>
+      <h2><a class="black" href="/">Yuping (Allan) Lu</a></h2>
     </div>
 
     <p class="contact">
@@ -93,16 +93,14 @@
         <h5 id="university-of-tennessee"><a href="http://www.utk.edu">The University of Tennessee, Knoxville</a></h5>
         <ul>
           <li><a href="http://www.eecs.utk.edu/">Department of Electrical Engineering &amp; Computer Science</a></li> 
-          <li>PhD (August 2019)</li>
-          <li><strong>Major</strong>: Computer Science</li>
+          <li>PhD in Computer Science (August 2019) | GPA: 3.91</li>
           <li><strong>Advisor</strong>: Dr. Michael A. Langston</li>
           <li><a href="http://yupinglu.me/dissertation/">Dissertation</a></li>
         </ul>
 
         <h5 id="nanjing-agricultural-university"><a href="http://english.njau.edu.cn/">Nanjing Agricultural University</a></h5>
         <ul>
-          <li>Bachelor of Engineering (May 2011)</li>
-          <li><strong>Major</strong>: Computer Science</li>
+          <li>BEng in Computer Science (May 2011) | GPA: 3.64</li>
           <li><strong>Advisor</strong>: Dr. Huanliang Xu</li>
         </ul>
 
