--- a/index.html
+++ b/index.html
@@ -84,9 +84,7 @@
     <div class="row">
       <div class="col-sm-8 col-md-8">
         <h3 id="research-interests">Research Interests</h3>
-        <p>
-          I am interested in developing graph algorithms and tools for biological data. My recent biclique enumeration R package can be downloaded <a href="https://github.com/YupingLu/biclique">here</a>. I am also interested in using data mining and machine learning methods to solve scientific data problems. My current project is <a href="files/nexrad.pdf">NEXRAD Radar data classification</a>.
-        </p>
+        <p>Machine Learning | Graph Algorithm | Data Mining | Bioinformatics</p>
 
         <h3 id="education">Education</h3>
 
