--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
         <h5 id="university-of-tennessee"><a href="http://www.utk.edu">The University of Tennessee, Knoxville</a></h5>
         <ul>
           <li><a href="http://www.eecs.utk.edu/">Department of Electrical Engineering &amp; Computer Science</a></li> 
-          <li><strong>PhD</strong> in Computer Science (August 2019) | <strong>GPA</strong>: 3.91</li>
-          <li><strong>Advisor</strong>: Dr. Michael A. Langston</li>
+          <li>PhD in Computer Science (August 2019) | GPA: 3.91</li>
+          <li>Advisor: Dr. Michael A. Langston</li>
           <li><a href="http://yupinglu.me/dissertation/">Dissertation</a></li>
         </ul>
 
         <h5 id="nanjing-agricultural-university"><a href="http://english.njau.edu.cn/">Nanjing Agricultural University</a></h5>
         <ul>
-          <li><strong>BEng</strong> in Computer Science (May 2011) | <strong>GPA</strong>: 3.64</li>
-          <li><strong>Advisor</strong>: Dr. Huanliang Xu</li>
+          <li>BEng in Computer Science (May 2011) | GPA: 3.64</li>
+          <li>Advisor: Dr. Huanliang Xu</li>
         </ul>
 
         <h4 id="honors">Honors</h4>
