--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <h3 id="education">Education</h3>
 
-        <h5 id="university-of-tennessee"><a href="http://www.utk.edu">The University of Tennessee, Knoxville</a></h5>
+        <h5 id="university-of-tennessee"><a href="http://www.utk.edu"><strong>The University of Tennessee, Knoxville</strong></a></h5>
         <ul>
           <li><a href="http://www.eecs.utk.edu/">Department of Electrical Engineering &amp; Computer Science</a></li> 
           <li>PhD in Computer Science (August 2019) | GPA: 3.91</li>
@@ -96,7 +96,7 @@
           <li><a href="http://yupinglu.me/dissertation/">Dissertation</a></li>
         </ul>
 
-        <h5 id="nanjing-agricultural-university"><a href="http://english.njau.edu.cn/">Nanjing Agricultural University</a></h5>
+        <h5 id="nanjing-agricultural-university"><a href="http://english.njau.edu.cn/"><strong>Nanjing Agricultural University</strong></a></h5>
         <ul>
           <li>BEng in Computer Science (May 2011) | GPA: 3.64</li>
           <li>Advisor: Dr. Huanliang Xu</li>
